fix z-index and styling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,6 +9,13 @@
   width: 100%;
 }
 
+.arc-fraud-schemes {
+  .container {
+    z-index: 0;
+    position: relative;
+  }
+}
+
 .arc-fraud-top {
   margin-top: 60px;
 }
