--- a/src/scss/partials/_accordion.scss
+++ b/src/scss/partials/_accordion.scss
@@ -22,7 +22,9 @@
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
-
+.airlinePartRow.active .airlinePartRowStart {
+    background: #212122;
+}
 .airlinePartRowStart {
     position: relative;
     z-index: 5;
